// This file is part of arduino-cli.
//
// Copyright 2020 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to
// modify or otherwise use the software for commercial activities involving the
// Arduino software without disclosing the source code of your own applications.
// To purchase a commercial license, send an email to license@arduino.cc.

syntax = "proto3";

package cc.arduino.cli.commands.v1;

option go_package = "github.com/arduino/arduino-cli/rpc/cc/arduino/cli/commands/v1;commands";

message KeysGenerateRequest {
  // algorithm_type is the algorithm type we want to use to generate the keys
  string algorithm_type = 1;
  // key_name is the list of keynames we want to generate
  repeated string key_name = 2;
  // keys_keychain is the location of the keychain we want to save the keys to
  string keys_keychain = 3;
}

message KeysGenerateResponse {
  // keys_keychain contains the location of keys generated
  string keys_keychain = 1;
}